# cugetreg

./: .dockerignore  .env  .env.beta  .env.dev  .env.prod  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .npmrc copy  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  CONTRIBUTING.md  Dockerfile.base  README.md  babel.config.js  biome.json  bun.lockb  custom-test-env.js  docker-compose.yaml  dockerfile  eslint.config.js  eslint.config.ts  jest-puppeteer.config.js  jest.config.js  jest.e2e.config.js  jest.setup.ts  lighthouserc.js  migrations.json  next-seo.config.js  next-sitemap.js  next.config.js  nx.json  package.json  pnpm-lock.yaml  (+8 more)
.changeset/: admin-web-env.md  afraid-flowers-confess.md  better-toes-flow.md  big-tomatoes-sleep.md  bright-pets-wait.md  brown-camels-know.md  change.md  clean-bananas-drive.md  clear-ways-open.md  clever-readers-obey.md  cold-fishes-greet.md  config.json  demo-fetched-data.md  dont-deploy-prod-at-4am.md  dry-crabs-thank.md  dry-emus-cheer.md  dry-trainers-knock.md  (+78 more)
apps/reg-scraper-py/: .env.example  .gitignore  README.md  package.json  pyproject.toml
apps/reg-scraper-py/src/reg_scraper/: __init__.py  __main__.py  config.py  models.py  pipeline.py
apps/reg-scraper-py/src/reg_scraper/exporters/: __init__.py  base.py  json_exporter.py  postgres_exporter.py
apps/reg-scraper-py/src/reg_scraper/processors/: __init__.py  base.py  course_html_processor.py  enrich_processor.py
apps/reg-scraper-py/src/reg_scraper/receivers/: __init__.py  base.py  reg_chula_receiver.py
(+2366 files in other folders)
