[project]
name = "reg-scraper"
version = "0.1.0"
description = "CU Get Reg v2 course scraper (Receivers/Processors/Exporters)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "psycopg[binary]>=3.2.0",
  "cuid2>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
reg-scraper = "reg_scraper.__main__:main"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
